--- a/01-prop-pos/test.in
+++ b/01-prop-pos/test.in
@@ -1,3 +1,7 @@
+# ----------------------------------------------------------------------------
+# Test input file
+# ----------------------------------------------------------------------------
+
 .t trivial equations
 .eq a a
 .eq {a} a
