Split test cases

--- a/01-prop-pos/test.in
+++ b/01-prop-pos/test.in
@@ -53,12 +53,13 @@ b
 .as a
 .as b
 
-.t disjunction introduction
+.t disjunction introduction 1
 a
-.as [a b]]
-.c
+.as [a b]
+
+.t disjunction introduction 2
 b
-.as [a b]]
+.as [a b]
 
 # Note: disjunction elimination can't be expressed without implication
 
